--- a/app/build.gradle
+++ b/app/build.gradle
@@ -3,7 +3,7 @@ apply plugin: 'com.android.application'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.example.wl.itemview"
+        applicationId "com.example.wl.projectview"
         minSdkVersion 15
         targetSdkVersion 28
         versionCode 1
@@ -26,4 +26,10 @@ dependencies {
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
     implementation project(':view')
+    implementation 'com.github.Hu12037102.ImageCompress:compress:2.0.7'
+}
+allprojects {
+    repositories {
+        maven { url 'https://jitpack.io' }
+    }
 }
